--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           <li class="main-contact">
             <a class="contact-link" href="mailto:info@devstudio.com"
               ><svg class="icon-contact" width="16px" height="12px">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
+                <use href="./images/symbol-defs.svg#icon-icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="main-contact">
             <a class="contact-link" href="tel:+380961111111">
               <svg class="icon-contact" width="10px" height="16px">
-                <use href="./images/symbol-defs.svg#icon-mob"></use></svg
+                <use href="./images/symbol-defs.svg#icon-icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -68,7 +68,7 @@
             <li class="title-text">
               <div class="icon-background">
                 <svg class="icon-feature" width="70px" height="70px">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -79,7 +79,7 @@
             <li class="title-text">
               <div class="icon-background">
                 <svg class="icon-feature" width="70px" height="70px">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-clock"></use>
                 </svg>
               </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -90,7 +90,7 @@
             <li class="title-text">
               <div class="icon-background">
                 <svg class="icon-feature" width="70px" height="70px">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
@@ -99,7 +99,7 @@
             <li class="title-text">
               <div class="icon-background">
                 <svg class="icon-feature" width="70px" height="70px">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -142,25 +142,25 @@
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -175,25 +175,25 @@
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -208,25 +208,25 @@
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -241,25 +241,25 @@
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-instagram"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li>
                     <a class="team-link" href=""
                       ><svg class="team-svg" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                        <use href="./images/symbol-defs.svg#icon-icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -276,42 +276,42 @@
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo2"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo3"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo4"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="svg-logo-list">
               <a class="svg-logo-link" href=""
                 ><svg class="icon-svg" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-logo5"></use>
+                  <use href="./images/symbol-defs.svg#icon-icon-Logo5"></use>
                 </svg>
               </a>
             </li>
@@ -352,25 +352,25 @@
             <li class="list-svg">
               <a class="footer-link-svg" href=""
                 ><svg class="footer-svg" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                  <use href="./images/symbol-defs.svg#icon-icon-instagram"></use></svg
               ></a>
             </li>
             <li class="list-svg">
               <a class="footer-link-svg" href=""
                 ><svg class="footer-svg" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                  <use href="./images/symbol-defs.svg#icon-icon-twitter"></use></svg
               ></a>
             </li>
             <li class="list-svg">
               <a class="footer-link-svg" href=""
                 ><svg class="footer-svg" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                  <use href="./images/symbol-defs.svg#icon-icon-facebook"></use></svg
               ></a>
             </li>
             <li class="list-svg">
               <a class="footer-link-svg" href=""
                 ><svg class="footer-svg" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                  <use href="./images/symbol-defs.svg#icon-icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
